Enabled Live Mode

--- a/RedZoneHelper2/RedZoneHelper2/Properties/Settings.settings
+++ b/RedZoneHelper2/RedZoneHelper2/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="lastApiRequestDateTime" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="currentTime" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
